--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-and-deploy:
-    runs-no: ubuntu-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
@@ -20,9 +20,9 @@ jobs:
 
       - name: Install dependencies
         run: npm ci --legacy-peer-deps
-      
+
       - name: Build Storybook
-        run: build-storybook
+        run: npm run build-storybook
 
       - name: Deploy Storybook
         run: npm run deploy-storybook -- --ci --existing-output-dir=storybook-static
